univention-novnc (0.4+0+20131014+git142aa45-2) ucs-3.2; urgency=low

  * Test for secured websocket port (Bug #33587)

 -- Philipp Hahn <hahn@univention.de>  Tue, 21 Jan 2014 12:30:21 +0100

univention-novnc (0.4+0+20131014+git142aa45-1) ucs-3.2; urgency=low

  * Replace Java based VNC applet by noVNC (Bug #30540)

 -- Philipp Hahn <hahn@univention.de>  Mon, 14 Oct 2013 14:16:32 +0200

novnc (0.4) maverick; urgency=low

  * Clarify permissive licenses of HTML, CSS, images.
  * Use render queue and requestAnimationFrame
  * UltraVNC repeater support

 -- Joel Martin <github@martintribe.org>  Fri, 14 Sep 2012 05:00:00 -0600

novnc (0.3) maverick; urgency=low

  * add tight encoding support
  * release pressed key when focus lost (fixes locked Alt key)
  * Support Apple Remote Desktop
  * Add nova/openstack proxy wrapper
  * Better connection close handling/reporting

 -- Joel Martin <github@martintribe.org>  Fri, 11 May 2012 03:00:00 -0600

novnc (0.2) maverick; urgency=low

  * Mobile device support with viewport clipping
  * Much better styling that also works on mobile devices well
  * Update websockify to support latest WebSocket protocol HyBi 13
    (i.e. support IETF 6455)
  * Better support in websockify for python 2.4 through 3.2
  * Support VMWare ESX and Intel AMT KVM
  * View only mode

 -- Joel Martin <github@martintribe.org>  Tue, 05 Jul 2011 01:00:00 -0600

novnc (0.1) maverick; urgency=low

  * First upstream release

 -- Joel Martin <github@martintribe.org>  Tue, 05 Jul 2011 01:00:00 -0600