@@ -1,10 +1,7 @@
 <IfModule alias_module>
-	Alias /univention-novnc /usr/share/novnc
-	<Directory /usr/share/novnc>
-		DirectoryIndex vnc.html
-		Options -Indexes
-		AllowOverride None
-		Order allow,deny
-		Allow from all
-	</Directory>
+	RewriteEngine On
+	RewriteCond %{HTTPS} !=on
+	RewriteRule ^/univention-novnc/?(.*) http://%{SERVER_NAME}:6080/$1 [R,L]
+	RewriteCond %{HTTPS} =on
+	RewriteRule ^/univention-novnc/?(.*) https://%{SERVER_NAME}:6080/$1 [R,L]
 </IfModule>
