@@ -1,3 +1,9 @@
+univention-novnc (0.4+0+20131014+git142aa45-3) ucs-3.2; urgency=low
+
+  * Add work-around for Firefox security excetion (Bug #33587)
+
+ -- Philipp Hahn <hahn@univention.de>  Tue, 21 Jan 2014 20:07:17 +0100
+
 univention-novnc (0.4+0+20131014+git142aa45-2) ucs-3.2; urgency=low
 
   * Test for secured websocket port (Bug #33587)
